[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Slime/Slime.gd" type="Script" id=1]
[ext_resource path="res://assets/slime spritesheet calciumtrice.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "attacking"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jumping"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=5]
resource_name = "moving"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[sub_resource type="CircleShape2D" id=7]
radius = 17.0

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attacking = SubResource( 1 )
anims/dying = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jumping = SubResource( 4 )
anims/moving = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.107315, 9.12214 )
texture = ExtResource( 2 )
offset = Vector2( 0.107315, -9.12214 )
vframes = 20
hframes = 10
frame = 30

[node name="Body" type="Area2D" parent="."]
editor/display_folded = true

[node name="BodyCollisionShape" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 9 )
shape = SubResource( 6 )

[node name="AttackRange" type="RayCast2D" parent="."]
position = Vector2( 0, 9 )
cast_to = Vector2( -17, 0 )

[node name="AttackArea" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 7 )
[connection signal="input_event" from="Body" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Body" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Body" to="." method="_on_mouse_exited"]
